--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -58,7 +58,7 @@
     <div class="col-xs-12">
         <div class="box box-solid">
             <div class="box-body">
-                <a class="btn btn-primary btn-flat" href="@(Url.Action("Create", "Ticket"))">Create new ticket</a>
+                <a class="btn btn-primary btn-flat" href="@(Url.Action("Create", "Ticket"))"><i class="fa fa-plus" aria-hidden="true"></i>&nbsp;&nbsp;New ticket</a>
                 <div class="pull-right">
                     <div class="input-group" style="width: 300px">
                         <input type="text" id="search-txt" class="form-control" placeholder="Search by subject...">
