--- a/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Report/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.Ajax.Utilities
 @{
     Layout = "~/Areas/HelpDesk/Views/Shared/_Layout.cshtml";
-    //ViewBag.Title = "Ticket Management";
+    ViewBag.Title = "Report";
 }
 
 <style>
@@ -13,18 +13,22 @@
         margin-top: 20px;
     }
 
-        #doughnut-legend li {
-            display: inline-block;
-            font-size: 20px;
-            margin-right: 20px;
-        }
+    #doughnut-legend li {
+        display: inline-block;
+        font-size: 20px;
+        margin-right: 20px;
+    }
 
-            #doughnut-legend li span {
-                display: inline-block;
-                width: 12px;
-                height: 12px;
-                margin-right: 5px;
-            }
+    #doughnut-legend li span {
+        display: inline-block;
+        width: 12px;
+        height: 12px;
+        margin-right: 5px;
+    }
+
+    .table > thead > tr > th {
+        white-space: nowrap;
+    }
 </style>
 
 <div class="row">
@@ -43,8 +47,8 @@
                 <div class="form-horizontal">
                     <!--Dropdown type-->
                     <div class="form-group">
-                        <label class="col-sm-5 control-label">Type:</label>
-                        <div class="col-sm-7">
+                        <label class="col-sm-4 control-label">Type:</label>
+                        <div class="col-sm-8">
                             <select class="form-control" id="dropdownType">
                                 <option value="0" selected="selected">All tickets</option>
                                 <option value="1">All requests</option>
@@ -58,8 +62,8 @@
                     </div>
                     <!--Dropdown By-->
                     <div class="form-group">
-                        <label class="col-sm-5 control-label">By:</label>
-                        <div class="col-sm-7">
+                        <label class="col-sm-4 control-label">By:</label>
+                        <div class="col-sm-8">
                             <select class="form-control" id="dropdownBy">
                                 <option value="0">Mode</option>
                                 <option value="1">Category</option>
@@ -73,23 +77,21 @@
                     </div>
                     <!--Date From-->
                     <div class="form-group">
-                        <label class="col-sm-5 control-label">Date From:</label>
-                        <div class="col-sm-7">
+                        <label class="col-sm-4 control-label">Date From:</label>
+                        <div class="col-sm-8">
                             <input type="text" class="form-control datetime" placeholder="DD/MM/YYYY" id="date-from-txt" value="@DateTime.Now.AddMonths(-1).ToShortDateString()">
                         </div>
                     </div>
                     <!--Date to-->
                     <div class="form-group">
-                        <label class="col-sm-5 control-label">Date To:</label>
-                        <div class="col-sm-7">
+                        <label class="col-sm-4 control-label">Date To:</label>
+                        <div class="col-sm-8">
                             <input type="datetime" class="form-control datetime" placeholder="DD/MM/YYYY" id="date-to-txt" value="@DateTime.Now.ToShortDateString()">
                         </div>
                     </div>
                     <!--Button Generate Report-->
-                    <div class="form-group">
-                        <div class="col-sm-offset-4">
-                            <button id="btnExport">Export Report</button>
-                        </div>
+                    <div class="col-sm-offset-4">
+                        <button id="btnExport" class="btn btn-primary btn-flat">Export Report</button>
                     </div>
                 </div>
             </div>
@@ -97,38 +99,40 @@
     </div>
 </div>
 
-<div class="col-xs-12">
-    <div class="box box-primary">
-        <!-- /.box-header -->
-        <div class="box-body">
-            <table class="table table-bordered table-hover" id="ticket-table-report">
-                <thead>
-                    <tr>
-                        <th>Code</th>
-                        <th>Subject</th>
-                        <th>Created Time</th>
-                        <th>Schedule End Date</th>
+<div class="row">
+    <div class="col-xs-12">
+        <div class="box box-primary">
+            <!-- /.box-header -->
+            <div class="box-body">
+                <table class="table table-bordered table-hover" id="ticket-table-report">
+                    <thead>
+                        <tr>
+                            <th>Code</th>
+                            <th>Subject</th>
+                            <th>Created Time</th>
+                            <th>Schedule End Date</th>
 
-                        <th>Actual End Date</th>
-                        <th>Type</th>
-                        <th>Mode</th>
-                        <th>Catagory</th>
+                            <th>Actual End Date</th>
+                            <th>Type</th>
+                            <th>Status</th>
+                            <th>Mode</th>
 
-                        <th>Impact</th>
-                        <th>Urgency</th>
-                        <th>Priority</th>
-                        <th>Status</th>
-                        <th>Department</th>
-                    </tr>
-                </thead>
-                <tbody></tbody>
-            </table>
+                            <th>Catagory</th>
+                            <th>Impact</th>
+                            <th>Urgency</th>
+                            <th>Priority</th>
+
+                            <th>Department</th>
+                        </tr>
+                    </thead>
+                    <tbody></tbody>
+                </table>
+            </div>
+            <!-- /.box-body -->
         </div>
-        <!-- /.box-body -->
+        <!-- /.box -->
     </div>
-    <!-- /.box -->
 </div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/chart")
     <script>
@@ -137,7 +141,6 @@
             "#000000",
             "#318ce7", "#ace5ee", "#8a2be2", "#1dacd6", "#ffc1cc", "#536872", "#006b3c"
         ];
-        var generatereport = $("#draw-graph");
 
         function ProcessGraph() {
             $.ajax({
@@ -156,12 +159,18 @@
         }
 
         function drawChart(chartLabels, chartData) {
+            var numberOfData = 0;
+            for (i = 0; i < chartData.length; i++) {
+                numberOfData += chartData[i];
+            }
+
             if (chartLabels == null) {
                 $('#pieChart').replaceWith('<canvas id="pieChart"></canvas>');
                 $.notify("No lables to draw chart", "success");
-            } else if (chartData == null) {
-                $('#pieChart').replaceWith('<canvas id="pieChart"></canvas>');
-                $.notify("No data to draw chart", "success");
+                return;
+            } else if (numberOfData == 0) {
+                $('#pieChart').replaceWith('<div id="pieChart"><center><h2>No data</h2></center></div>');
+                return;
             }
             var colors = [];
             for (var i = 0; i < chartLabels.length; i++) {
@@ -265,15 +274,15 @@
                         "render": function (data, type, row) {
                             return row[6];
                         },
-                        // Mode
+                        // Status
                         "targets": 6,
-                        "visible": false
+                        "visible": true
                     },
                     {
                         "render": function (data, type, row) {
                             return row[7];
                         },
-                        // Category
+                        // Mode
                         "targets": 7,
                         "visible": false
                     },
@@ -281,7 +290,7 @@
                         "render": function (data, type, row) {
                             return row[8];
                         },
-                        // impact
+                        // Category
                         "targets": 8,
                         "visible": false
                     },
@@ -289,7 +298,7 @@
                         "render": function (data, type, row) {
                             return row[9];
                         },
-                        // Urgency
+                        // impact
                         "targets": 9,
                         "visible": false
                     },
@@ -297,7 +306,7 @@
                         "render": function (data, type, row) {
                             return row[10];
                         },
-                        // Priority
+                        // Urgency
                         "targets": 10,
                         "visible": false
                     },
@@ -305,9 +314,9 @@
                         "render": function (data, type, row) {
                             return row[11];
                         },
-                        // Status
+                        //  Priority
                         "targets": 11,
-                        "visible": true
+                        "visible": false
                     },
                     {
                         "render": function (data, type, row) {
@@ -320,8 +329,6 @@
                 ]
             });
 
-
-
         var reloadDataTable = function () {
             var oTable = $("#ticket-table-report").dataTable();
             oTable.api().ajax.reload();
@@ -332,9 +339,7 @@
         });
 
         var resetVisibleColumns = function () {
-            var column = $("#ticket-table-report").dataTable().api().column("6");
-            column.visible(false);
-            column = $("#ticket-table-report").dataTable().api().column("7");
+            var column = $("#ticket-table-report").dataTable().api().column("7");
             column.visible(false);
             column = $("#ticket-table-report").dataTable().api().column("8");
             column.visible(false);
@@ -353,28 +358,27 @@
             var byValue = $(this).val();
             resetVisibleColumns();
             switch (byValue) {
-
                 case "0": // Mode
-                    var column = $("#ticket-table-report").dataTable().api().column("6");
-                    column.visible(true);
-                    break;
-                case "1": // Category
                     var column = $("#ticket-table-report").dataTable().api().column("7");
                     column.visible(true);
                     break;
-
-                case "2": //impact
+                case "1": // Category
                     var column = $("#ticket-table-report").dataTable().api().column("8");
                     column.visible(true);
                     break;
 
-                case "3": //Urgency
+                case "2": //impact
                     var column = $("#ticket-table-report").dataTable().api().column("9");
                     column.visible(true);
                     break;
 
-                case "4": // Priority
+                case "3": //Urgency
                     var column = $("#ticket-table-report").dataTable().api().column("10");
+                    column.visible(true);
+                    break;
+
+                case "4": // Priority
+                    var column = $("#ticket-table-report").dataTable().api().column("11");
                     column.visible(true);
                     break;
 
@@ -382,13 +386,7 @@
                     var column = $("#ticket-table-report").dataTable().api().column("12");
                     column.visible(true);
                     break;
-                case "6": // Status
-                    var column = $("#ticket-table-report").dataTable().api().column("11");
-                    column.visible(true);
-                    break;
             }
-
-
         });
 
         $("#date-from-txt").on("change",
