--- a/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/Shared/_Layout.cshtml
@@ -152,7 +152,7 @@
                         </a>
                     </li>
                     <li id="menu-report" class="treeview">
-                        <a href="@Url.Action("Create","ManageTicket")">
+                        <a href="@Url.Action("Index", "Report")">
                             <i class="fa fa-pie-chart"></i>
                             <span>REPORT</span>
                         </a>
