--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -335,6 +335,7 @@
     <script src="~/Content/Plugins/jstree/jstree.min.js"></script>
     <script>
         $(document).ready(function () {
+            notifyFlashMessage();
             showTreeViewModal();
 
             $(".menu-item").click(function () {
