--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
@@ -8,23 +8,16 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header padding-bottom-20">
-                <button type="button" class="btn btn-success" onclick="showCreateModal()">
-                    New Impact
-                </button>
+                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Impact</button>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-                <table class="table table-bordered table-hover" id="impact-table">
+                <table class="table dataTable" id="impact-table">
                     <thead>
                         <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Description
-                            </th>
-                            <th>
-                            </th>
+                            <th>Name</th>
+                            <th>Description</th>
+                            <th>Action</th>
                         </tr>
                     </thead>
                     <tbody></tbody>
@@ -65,7 +58,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="create-btn" onclick="createImpact()">Save changes</button>
+                <button type="button" class="btn btn-success" id="create-btn" onclick="createImpact()">Save</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -87,7 +80,7 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary" id="yes-btn">Yes</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-            </div>
+            </div> 
         </div>
         <!-- /.modal-content -->
     </div>
@@ -103,8 +96,10 @@
             .DataTable({
                 processing: true,
                 serverSide: true,
+                lengthChange: false,
                 paging: true,
-                sort: true,
+                sort: false,
+                filter: false,
                 ajax: {
                     url: "/Admin/ManageSC/GetImpacts"
                 },
@@ -126,8 +121,8 @@
                         "render": function (data, type, row) {
 
                             return (
-                                '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getImpactDetail(\'' +row[0]+'\')"></button>' +
-                                '<button type="button" class="fa fa-trash-o" onclick="showDeleteModal(\'' + row[0] + '\')"></button>');
+                                '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getImpactDetail(\'' + row[0] + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
+                                '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>');
                         },
                         "targets": 2
                     }
