--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
@@ -97,7 +97,6 @@
                 processing: true,
                 serverSide: true,
                 lengthChange: false,
-                paging: true,
                 sort: false,
                 filter: false,
                 ajax: {
@@ -119,10 +118,8 @@
                     },
                     {
                         "render": function (data, type, row) {
-
-                            return (
-                                '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getImpactDetail(\'' + row[0] + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
-                                '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>');
+                            return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getImpactDetail(\'' + row[0] + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
+                                   '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>';
                         },
                         "targets": 2
                     }
