--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Urgency.cshtml
@@ -6,13 +6,11 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-header padding-bottom-20">
-                <button type="button" class="btn btn-success" onclick="showCreateModal()">
-                    New Urgency
-                </button>
+                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Urgency</button>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-                <table class="table table-bordered table-hover" id="urgency-table">
+                <table class="table dataTable" id="urgency-table" dt-options="dtOptions">
                     <thead>
                         <tr>
                             <th>
@@ -63,7 +61,7 @@
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary" id="create-btn" onclick="createUrgency()">Save changes</button>
+                <button type="button" class="btn btn-success" id="create-btn" onclick="createUrgency()">Save</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -97,12 +95,18 @@
 @section scripts{
     @Scripts.Render("~/bundles/datatables")
     <script>
+        $(document).ready(function () {
+            reloadDataTable();
+        });
+
         $("#urgency-table")
             .DataTable({
                 processing: true,
                 serverSide: true,
+                lengthChange: false,
+                filter: false,
                 paging: true,
-                sort: true,
+                sort: false,
                 ajax: {
                     url: "/Admin/ManageSC/GetUrgency"
                 },
@@ -122,9 +126,8 @@
                     },
                     {
                         "render": function (data, type, row) {
-                            return '<button type="button" class="fa fa-pencil" data-toggle="modal" onclick="getUrgencyDetail(\'' + row[0] + '\')"></button>' +
-                                   '<button type="button" class="fa fa-trash-o" onclick="showDeleteModal(\'' + row[0] + '\')"></button>';
-
+                            return '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getUrgencyDetail(\'' + row[0] + '\')"><i class = "fa fa-pencil"></i></a>&nbsp;&nbsp;' +
+                                '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row[0] + '\')"><i class="fa fa-trash-o"></i></a>';
                         },
                         "targets": 2
                     }
@@ -284,6 +287,7 @@
                 }
             });
         }
+
 
     </script>
 }
