--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Impact.cshtml
@@ -7,18 +7,15 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-header padding-bottom-20">
-                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Impact</button>
-            </div>
-            <!-- /.box-header -->
             <div class="box-body">
+                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Impact</button>
                 <table class="table dataTable" id="impact-table">
                     <thead>
-                        <tr>
-                            <th>Name</th>
-                            <th>Description</th>
-                            <th>Action</th>
-                        </tr>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Action</th>
+                    </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
@@ -96,7 +93,7 @@
             .DataTable({
                 processing: true,
                 serverSide: true,
-                lengthChange: false,
+                paging: false,
                 sort: false,
                 filter: false,
                 ajax: {
