--- a/TMS/TMS/Areas/Admin/Views/ManageSC/Priority.cshtml
+++ b/TMS/TMS/Areas/Admin/Views/ManageSC/Priority.cshtml
@@ -6,23 +6,20 @@
 <div class="row">
     <div class="col-xs-12">
         <div class="box box-primary">
-            <div class="box-header padding-bottom-20">
+          <div class="box-body">
                 <button type="button" class="btn btn-flat btn-primary" data-target="#myModal" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Priority</button>
-            </div>
-            <!-- /.box-header -->
-            <div class="box-body">
                 <table class="table dataTable" id="priority-table">
                     <thead>
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Description
-                            </th>
-                            <th>
-                            </th>
-                        </tr>
+                    <tr>
+                        <th>
+                            Name
+                        </th>
+                        <th>
+                            Description
+                        </th>
+                        <th>
+                        </th>
+                    </tr>
                     </thead>
                     <tbody></tbody>
                 </table>
@@ -101,7 +98,7 @@
                 processing: true,
                 serverSide: true,
                 lengthChange: false,
-                paging: true,
+                paging: false,
                 sort: false,
                 filter: false,
                 ajax: {
