--- a/TMS/TMS/Views/KnowledgeBase/Create.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Create.cshtml
@@ -40,13 +40,12 @@
                     <div class="col-md-10">
                         @Html.TextBoxFor(m => m.Subject, new { @class = "form-control", id = "subject" })
                         @Html.ValidationMessageFor(m => m.Subject, "", new { @class = "text-danger" })
-                        <p id="validate-message-error" style="display: none">Subject is required! </p>
                     </div>
                 </div>
-                <div class="form-group" id="description">
+                <div class="form-group">
                     <label class="control-label col-md-2">Content</label>
                     <div class="col-md-10">
-                        @Html.TextAreaFor(m => m.Content, new { @class = "form-control", id = "description", rows = "10" })
+                        @Html.TextAreaFor(m => m.Content, new { @class = "form-control", id = "content-area", rows = "20" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -79,6 +78,7 @@
         $(document)
             .ready(function () {
                 loadCategoryDropdown();
+                $('#content-area').wysihtml5();
             });
 
         var loadCategoryDropdown = function () {
