--- a/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Edit.cshtml
@@ -47,7 +47,7 @@
                 <div class="form-group" id="description">
                     <label class="control-label col-md-2">Content</label>
                     <div class="col-md-10">
-                        @Html.TextAreaFor(m => m.Content, new { @class = "form-control", rows = "10" })
+                        @Html.TextAreaFor(m => m.Content, new { @class = "form-control", id = "content-area", rows = "20" })
                     </div>
                 </div>
                 <div class="form-group">
@@ -84,6 +84,7 @@
         $(document)
          .ready(function () {
              loadCategoryDropdown();
+             $('#content-area').wysihtml5();
          });
 
         var loadCategoryDropdown = function () {
@@ -109,14 +110,14 @@
                     @if (Model.CategoryID == 0)
                     {
                         <text>
-                            $("#category-dropdown").val($("#category-dropdown").first().val());
-                        </text>
+                    $("#category-dropdown").val($("#category-dropdown").first().val());
+                    </text>
                     }
                     else
                     {
                         <text>
-                            $("#category-dropdown").val(@Model.CategoryID);
-                        </text>
+                    $("#category-dropdown").val(@Model.CategoryID);
+                    </text>
                     }
                 }
             });
